--- a/styles/landing/landing-recent.scss
+++ b/styles/landing/landing-recent.scss
@@ -7,7 +7,7 @@
      &__container{
         padding: 4rem 6.2% 4rem 6.2%;
 
-         .section-title{
+         .section-header{
 
             h3{
                 color: #fff;
@@ -18,6 +18,10 @@
                 border-radius: 4px;
                 padding-left: 17px;
             }
+         }
+
+         .section-content{
+
          }
      }
 }
