--- a/styles/landing/landing-recent.scss
+++ b/styles/landing/landing-recent.scss
@@ -83,6 +83,10 @@
                         font-size: 19px;
                         font-weight: 600;
                         letter-spacing: 1.5px;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
                     }
                 }
              }
