--- a/styles/landing/landing-actu.scss
+++ b/styles/landing/landing-actu.scss
@@ -1,14 +1,13 @@
 .landing-actu {
     width: 100%;
-    height: 100vh;
+    height: 100%;
 
     &__container {
         width: 100%;
-        height: 100vh;
+        height: 100%;
         background-size: cover;
         background-position: center center;
-        padding: 4rem 6.2% 4rem 6.2%;
-        background-attachment: fixed;
+        padding: 1.6rem 6.2% 1.6rem 6.2%;
         z-index: 1;
         background-color: $bg-color;
 
@@ -83,11 +82,11 @@
         }
 
         .section-picture {
-            width: 100%;
+            width: 95%;
             height: 100%;
 
             img {
-                width: 100%;
+                width: 95%;
                 height: 100%;
                 object-fit: cover;
                 border-radius: 10px;
