--- a/styles/landing/landing-recent.scss
+++ b/styles/landing/landing-recent.scss
@@ -24,6 +24,7 @@
 
              .box{
                 width: 98%;
+                cursor: pointer;
 
                 &__image{
                      width: 100%;
