--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,8 +1,10 @@
 @import "./settings";
 @import "./mixin";
+@import "./loader";
 
 /* =============Landing styles============ */
 @import "./landing/landing-nav.scss";
 @import "./landing/landing-hero.scss";
 @import "./landing/landing-recent.scss";
 @import "./landing/landing-actu.scss";
+@import "./landing/landing-footer.scss";
