--- a/styles/landing/landing-footer.scss
+++ b/styles/landing/landing-footer.scss
@@ -1,5 +1,65 @@
 .landing-footer{
     width: 100%;
-    height: 5rem;
     background-color: $bg-color;
+
+    &__container{
+        padding: 2rem 6.2% 2rem 6.2%;
+
+        .section-left-side{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+
+              .title{
+                display: flex;
+                flex-direction: row;
+                gap: 12px;
+                white-space: nowrap;
+
+                .circle{
+                    width: 23px;
+                    height: 23px;
+                    border-radius: 50%;
+                    background-color: $color-primary;
+                }
+
+                 h4{
+                    color: #fff;
+                    display: flex;
+                    align-items: center;
+                    font-weight: bold;
+                    color: $color-primary;
+                 }
+              }
+
+              .line{
+                width: 35%;
+                border-radius: 12px;
+                height: 4.4px;
+                background-color: $color-primary;
+              }
+
+              .contact-items{
+                margin-top: 1.5rem;
+                width: 100%;
+                height: 100%;
+                border: 2px solid $color-primary;
+                border-radius: 9px;
+                background-color: rgb(51, 49, 49);
+                padding: 15px;
+
+                p{
+                    color: #fff;
+                    font-size: 18.6px;
+                    gap: 15px;
+
+                     .icon{
+                        color: $color-primary;
+                        font-size: 24px;
+                     }
+                }
+              }
+        }
+    }
 }
