--- a/styles/landing/landing-footer.scss
+++ b/styles/landing/landing-footer.scss
@@ -1,65 +1,119 @@
-.landing-footer{
+.landing-footer {
     width: 100%;
     background-color: $bg-color;
 
-    &__container{
-        padding: 2rem 6.2% 2rem 6.2%;
+    &__container {
+        padding: 2rem 6.2% 2.5rem 6.2%;
 
-        .section-left-side{
+        .section-left-side {
             display: flex;
             flex-direction: column;
             width: 100%;
             height: 100%;
 
-              .title{
+            .title {
                 display: flex;
                 flex-direction: row;
                 gap: 12px;
                 white-space: nowrap;
 
-                .circle{
+                .circle {
                     width: 23px;
                     height: 23px;
                     border-radius: 50%;
                     background-color: $color-primary;
                 }
 
-                 h4{
+                h4 {
                     color: #fff;
                     display: flex;
                     align-items: center;
                     font-weight: bold;
                     color: $color-primary;
-                 }
-              }
+                }
+            }
 
-              .line{
+            .line {
                 width: 35%;
                 border-radius: 12px;
-                height: 4.4px;
+                height: 4.8px;
                 background-color: $color-primary;
-              }
+            }
 
-              .contact-items{
+            .contact-items {
                 margin-top: 1.5rem;
-                width: 100%;
-                height: 100%;
-                border: 2px solid $color-primary;
+                width: 96%;
                 border-radius: 9px;
                 background-color: rgb(51, 49, 49);
-                padding: 15px;
+                padding: 12px;
 
-                p{
+                p {
                     color: #fff;
                     font-size: 18.6px;
                     gap: 15px;
 
-                     .icon{
+                    .icon {
                         color: $color-primary;
                         font-size: 24px;
-                     }
+                    }
                 }
-              }
+            }
+        }
+
+        .section-mail {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+
+            .title {
+                display: flex;
+                flex-direction: row;
+                gap: 12px;
+                white-space: nowrap;
+
+                .icon{
+                   color: $color-primary;
+                   font-size: 26px;
+                }
+
+                h4 {
+                    color: #fff;
+                    display: flex;
+                    align-items: center;
+                    font-weight: bold;
+                    color: $color-primary;
+                }
+            }
+
+            .line2 {
+                width: 70%;
+                border-radius: 12px;
+                height: 3px;
+                background-color: $color-primary;
+            }
+
+            .formulaire{
+                margin-top: 1.6rem;
+
+                
+             input{
+                width: 94%;
+                height: 3rem;
+                border-radius: 15px;
+                background-color: #e7dfdf;
+             }
+
+             button{
+                width: 94%;
+                height: 3.2rem;
+                color: #383636;
+                font-weight: bold;
+                border-radius: 15px;
+                background-color: $color-primary;
+                border: 0;
+             }
+            }
         }
     }
 }
