--- a/styles/landing/landing-hero.scss
+++ b/styles/landing/landing-hero.scss
@@ -4,13 +4,31 @@
     position: relative;
     margin-top: 2.5rem;
 
+    @include screen(small) {
+        margin-top: 5rem;
+    }
+
+    @include screen(medium) {
+        margin-top: 2.7rem;
+    }
+
     &__cover {
         width: 100%;
         height: calc(100vh);
         background-size: cover;
-        background-position: left center;
+        background-position: center center;
         padding: 0 6.2% 0 6.2%;
         display: flex;
+
+        @include screen(small) {
+            padding: 2rem 5% 1.7rem 5%;
+            height: 100%;
+        }
+
+        @include screen(medium) {
+            padding: 0 5% 0 5%;
+            height: 100%;
+        }
 
         &::before {
             content: "";
@@ -44,6 +62,14 @@
                 text-shadow: 2px 2px 12px rgba(51, 51, 51, 0.596);
                 line-height: 110%;
 
+                @include screen(small) {
+                    font-size: 2.2em;
+                }
+
+                @include screen(medium) {
+                    font-size: 2.5em;
+                }
+
                 span {
                     color: $color-primary;
                 }
@@ -71,11 +97,20 @@
                 font-weight: bold;
                 background-color: $bg-color;
                 border-radius: 14px;
+
+
+                @include screen(small) {
+                    white-space: nowrap;
+                    height: 50px;
+                    font-size: 16.6px;
+                    padding-left: 1.2rem;
+                    padding-right: 1.2rem;
+                }
             }
         }
     }
 
-    .section-pictures{
+    .section-pictures {
         position: relative;
         width: 101%;
         z-index: 8;
@@ -85,12 +120,30 @@
         margin: auto;
         height: 100%;
 
-         img{
+        @include screen(small){
+            height: 100%;
+            width: 100%;
+        }
+
+        @include screen(medium) {
+            width: 100%;
+        }
+
+        img {
             width: 100%;
             border-radius: 15px;
             height: 75%;
             object-fit: cover;
-         }
+
+            @include screen(small){
+                height: 100%;
+            }
+
+            @include screen(medium) {
+                width: 100%;
+                height: 42%;
+            }
+        }
     }
 
 }
