--- a/styles/global.scss
+++ b/styles/global.scss
@@ -8,3 +8,6 @@
 @import "./landing/landing-recent.scss";
 @import "./landing/landing-actu.scss";
 @import "./landing/landing-footer.scss";
+
+/* =============Landing styles============ */
+@import "./login/login.scss";
