--- a/styles/login/login.scss
+++ b/styles/login/login.scss
@@ -2,27 +2,62 @@
     width: 100%;
     height: 100vh;
     background-color: $bg-color;
+    background-size: cover;
+    background-position: right center;
+    padding: 0;
+    margin: 0;
+
+    @include screen(small) {
+        background-image: url("/Authentification/cover.jpg");
+        background-color: transparent;
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        z-index: 1;
+
+        @include screen(small) {
+            background-color: rgba(0, 0, 0, 0.747);
+        }
+    }
 
     &__container {
-        padding: 0rem 10% 0rem 10%;
-        z-index: 50;
         position: relative;
+        padding: 0rem 11% 0rem 11%;
+        z-index: 50;
+
+        @include screen(small) {
+            padding-left: 6vw;
+            padding-right: 6vw;
+            width: 100%;
+            height: 100vh;
+        }
 
         .section-form {
-            display: flex;
-            align-items: center;
-            justify-content: center;
             height: 100vh;
             width: 100%;
-            z-index: 100;
+
+
 
             &__container {
                 width: 100%;
-                height: 100%;
+                height: 100vh;
                 padding: 18px;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
+
+                @include screen(small) {
+                    padding: 0px;
+                }
 
                 .logo {
                     display: flex;
@@ -31,6 +66,7 @@
                     flex-direction: row;
                     text-align: start;
                     white-space: nowrap;
+
 
                     img {
                         width: 45px;
@@ -65,13 +101,13 @@
 
 
                     input {
-                        width:85%;
+                        width: 85%;
                         height: 3.2rem;
                         border-radius: 15px;
                         background-color: #e7dfdf;
 
                         @include screen(small) {
-                            width: 94%;
+                            width: 100%;
                         }
                     }
 
@@ -89,25 +125,30 @@
                             border: 0;
 
                             @include screen(small) {
-                                width: 94%;
-                                margin-left: 3%;
+                                width: 100%;
                             }
                         }
                     }
                 }
 
-                .authGoogle{
+                .authGoogle {
                     width: 85%;
                     margin-top: 2rem;
                     text-align: center;
                     overflow: hidden;
-                    p{
+
+                    @include screen(small) {
+                        width: 100%;
+
+                    }
+
+                    p {
                         color: #fff;
                         font-size: 20px;
                         font-weight: bold;
                         text-align: center;
 
-                        &::before{
+                        &::before {
                             content: "";
                             position: absolute;
                             margin-top: 12px;
@@ -117,7 +158,7 @@
                             background-color: #fff;
                         }
 
-                        &::after{
+                        &::after {
                             content: "";
                             position: absolute;
                             margin-top: 12px;
@@ -128,14 +169,18 @@
                         }
                     }
 
-                    .btn{
+                    .btn {
                         color: $bg-color;
                         margin-top: 0.7rem;
                         background-color: #fff;
                         font-weight: bold;
-                        padding: 10px ;
+                        padding: 10px;
                         width: 100%;
                         border-radius: 12px;
+
+                        @include screen(small) {
+                            width: 100%;
+                        }
 
                     }
                 }
