add codeVerification Page

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -9,6 +9,7 @@
 @import "./landing/landing-actu.scss";
 @import "./landing/landing-footer.scss";
 
-/* =============Landing styles============ */
+/* =============Auth styles============ */
 @import "./login/login.scss";
 @import "./signup/signup.scss";
+@import "./signup/code\ Verification.scss";
