--- a/styles/login/login.scss
+++ b/styles/login/login.scss
@@ -49,7 +49,7 @@
 
         @include screen(medium) {
             margin: 0 auto;
-            padding: 0 17% 0 17%;
+            padding: 0 26% 0 26%;
         }
 
         .section-form {
@@ -122,6 +122,7 @@
 
                         @include screen(small) {
                             width: 100%;
+                            height: 2.9rem;
                         }
 
 
@@ -145,6 +146,7 @@
 
                             @include screen(small) {
                                 width: 100%;
+                                height: 2.9rem;
                             }
                             @include screen(medium) {
                                 width: 100%;
@@ -172,6 +174,10 @@
                         font-size: 20px;
                         font-weight: bold;
                         text-align: center;
+
+                        @include screen(small) {
+                         font-size: 19px;
+                        }
 
                         &::before {
                             content: "";
@@ -205,6 +211,7 @@
 
                         @include screen(small) {
                             width: 100%;
+                            height: 2.9rem;
                         }
 
                         @include screen(medium) {
