--- a/styles/signup/code Verification.scss
+++ b/styles/signup/code Verification.scss
@@ -1,5 +1,4 @@
-.signup {
-    width: 100%;
+.code-verification {
     height: 100vh;
     overflow: hidden;
     background-image: url(/Authentification/signup-cover.png);
@@ -22,13 +21,16 @@
     &__container {
         margin: 0 auto;
         z-index: 50;
+        width: 50%;
         display: flex;
         flex-direction: column;
         align-items: center;
 
-        @include screen(small){
+        @include screen(small) {
             padding-left: 6vw;
             padding-right: 6vw;
+            width: 100%;
+            margin: 0 auto;
         }
 
         .logo {
@@ -54,17 +56,37 @@
             }
         }
 
-        .title{
+        .title {
+            text-align: center;
+            white-space: collapse;
 
-            h2{
+            @include screen(small) {
+                width: 100%;
+            }
+
+            h5 {
                 color: #fff;
-                font-weight: bolder;
+                line-height: 27px;
+
+                @include screen(small) {
+                    font-size: 19.4px;
+                }
+
+                span {
+                    color: $color-primary;
+                    text-decoration: underline;
+
+                    @include screen(small) {
+                        font-size: 16.4px;
+                    }
+    
+                }
             }
         }
 
-        .formulaire{
+        .formulaire {
 
-            
+
             input {
                 height: 3.1rem;
                 width: 100%;
@@ -96,7 +118,6 @@
 
                     @include screen(small) {
                         width: 100%;
-                        height: 2.9rem;
                     }
 
                     @include screen(medium) {
@@ -148,10 +169,8 @@
                 width: 100%;
                 border-radius: 12px;
 
-                @include screen(small) {
-                    width: 100%;
-                    height: 3rem;
-                }
+
+
             }
         }
     }
