add signup final

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -13,3 +13,4 @@
 @import "./login/login.scss";
 @import "./signup/signup.scss";
 @import "./signup/code\ Verification.scss";
+@import "./signup/inscription-final.scss";
