add navbar to dashboard

--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -1,7 +1,8 @@
 $color-primary: #F5CF49;
 $black: #242424;
 $black-color:#111111;
-$bg-color:#242222;
+$bg-color:#242424;
+$dark-grey: #616161;
 $paypen-font: 'Playpen Sans', cursive;
 
 *{
