--- a/styles/global.scss
+++ b/styles/global.scss
@@ -14,3 +14,4 @@
 @import "./signup/signup.scss";
 @import "./signup/code\ Verification.scss";
 @import "./signup/inscription-final.scss";
+@import "./dashboard/dashboard-nav.scss";
