--- a/styles/dashboard/dashboard-nav.scss
+++ b/styles/dashboard/dashboard-nav.scss
@@ -2,7 +2,7 @@
     width: 21%;
     height: 100vh;
     background-color: $black;
-    padding: 20px;
+    padding: 20px 0 20px 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -35,9 +35,8 @@
     }
 
     .menu-items {
-        display: flex;
         width: 100%;
-        justify-content: center;
+        padding-left: 32%;
 
         ul {
             display: flex;
@@ -45,20 +44,21 @@
             gap: 28px;
             margin: 0;
             padding: 0;
-            white-space: nowrap;
 
-            li{
-                margin-top: 13px;
+            li {
+                margin-top: 11px;
+                width: 100%;
+                border-right: 3px solid $color-primary;
             }
 
             a {
                 text-decoration: none;
-                font-size: 18px;
+                font-size: 16.5px;
                 color: #fff;
                 font-weight: bold;
                 text-align: start;
 
-                .icon{
+                .icon {
                     position: relative;
                     left: -24px;
                 }
@@ -74,32 +74,36 @@
         }
     }
 
-    .nav-footer{
-        background-color: rgb(51, 49, 49);
-        border-radius: 12px;
-        width: 100%;
-        padding: 17px;
+    .nav-footer {
+        padding-left: 20px;
+        padding-right: 20px;
 
-         .subtitle{
+        &__container {
+            background-color: rgb(51, 49, 49);
+            border-radius: 12px;
+            width: 100%;
+            padding: 17px;
 
-            h5{
-                color: #fff;
-                font-size: 18px;
+            .subtitle {
 
-                span{
-                    font-weight: bold;
+                h5 {
+                    color: #fff;
+                    font-size: 17.5px;
+
+                    span {
+                        font-weight: bold;
+                    }
                 }
             }
-         }
 
-         .unlock-icon{
-            width: 100%;
-            display: flex;
-            justify-content: center;
+            .unlock-icon {
+                display: flex;
+                justify-content: center;
 
-             .img{
-                width: 62%;
-             }
-         }
+                .img {
+                    width: 48%;
+                }
+            }
+        }
     }
 }
