--- a/styles/dashboard/dashboard-home.scss
+++ b/styles/dashboard/dashboard-home.scss
@@ -1,7 +1,75 @@
-.dashboard-home{
+.dashboard-home {
     width: 79%;
     margin-left: 21%;
     overflow: hidden;
     height: 100vh;
     background-color: $bg-color;
+
+    .dashboard-home-content {
+        padding: 40px 27px 15px 27px;
+
+        .section-hero {
+            width: 100%;
+            height: 100%;
+            background-color: $black-color;
+            box-shadow: 0 0 13px rgba(0, 0, 0, 0.61);
+            border-radius: 4px;
+
+            &__title {
+                padding: 30px 32px 32px 30px;
+
+                h2 {
+                    color: #fff;
+                    font-weight: bold;
+                    font-size: 38px;
+                }
+
+                h5 {
+                    color: #fff;
+                    text-transform: uppercase;
+                }
+
+                .lang {
+                    margin-top: 1.4rem;
+                    display: flex;
+                    flex-direction: row;
+                    gap: 23px;
+
+                    .vostfr {
+
+                        p {
+                            padding: 9px 22px 9px 22px;
+                            background-color: $color-primary;
+                            border-radius: 7px;
+                            font-weight: bold;
+                        }
+                    }
+
+                    .vf {
+                        p {
+                            padding: 6px 22px 6px 22px;
+                            border: 3px solid $color-primary;
+                            color: $color-primary;
+                            border-radius: 7px;
+                            font-weight: bold;
+                        }
+                    }
+                }
+
+            }
+
+            &__cover {
+                width: 100%;
+                height: 15rem;
+                overflow: hidden;
+                clip-path: polygon(100% 0%, 100% 100%, 0% 100%, 30% 0%);
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
 }
