--- a/styles/dashboard/dashboard-home.scss
+++ b/styles/dashboard/dashboard-home.scss
@@ -1,24 +1,23 @@
 .dashboard-home {
     width: 79%;
     margin-left: 21%;
-    overflow: hidden;
-    height: 100vh;
-    background-color: $bg-color;
+    height: max-content;
 
     .dashboard-home-content {
-        padding: 40px 27px 15px 27px;
+        padding: 40px 27px 43px 27px;
 
         .section-hero {
             width: 100%;
-            height: 100%;
+            height: 15.6rem;
             background-color: $black-color;
             box-shadow: 0 0 13px rgba(0, 0, 0, 0.61);
             border-radius: 4px;
+            overflow: hidden;
 
             &__title {
-                padding: 30px 32px 32px 30px;
+                padding: 35px 3px 40px 30px;
 
-                h2 {
+                h1 {
                     color: #fff;
                     font-weight: bold;
                     font-size: 38px;
@@ -60,7 +59,6 @@
 
             &__cover {
                 width: 100%;
-                height: 15rem;
                 overflow: hidden;
                 clip-path: polygon(100% 0%, 100% 100%, 0% 100%, 30% 0%);
 
@@ -68,6 +66,134 @@
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
+                }
+            }
+        }
+
+        .section-suggestion {
+
+            &__title {
+
+                h5 {
+                    color: #fff;
+                    font-weight: bold;
+                    font-size: 21.5px;
+                }
+            }
+
+            &__content {
+
+                .swiper-container {
+                    width: 100%;
+                    height: 100%;
+
+                    .swiper {
+                        width: 100%;
+                        height: 100%;
+                    }
+
+                    .swiper-slide {
+                        display: flex;
+                        flex-direction: column;
+                        border-radius: 7px;
+                        overflow: hidden;
+                        background-color: $black-color ;
+                        width: 30%;
+                        height: 100%;
+
+                        .cover {
+                            width: 100%;
+                            height: 15.6rem;
+                            background-image: url(/one-piece.jpg);
+                            background-size: cover;
+
+                            .date {
+                                display: flex;
+                                flex-direction: row;
+                                justify-content: flex-end;
+                                align-items: flex-end;
+                                width: 100%;
+                                height: 100%;
+                                padding-right: 12px;
+
+                                p {
+                                    padding: 8px;
+                                    width: 85%;
+                                    white-space: nowrap;
+                                    text-align: center;
+                                    font-size: 16px;
+                                    color: $color-primary;
+                                    background-color: $bg-color;
+                                    border-radius: 7px;
+                                    border: 3px solid $color-primary;
+                                    font-weight: bold;
+                                }
+                            }
+                        }
+
+                        .content {
+                            width: 100%;
+                            height: 100%;
+                            background-color: $black-color;
+                            padding: 15px;
+                            border-bottom-left-radius: 4px;
+                            border-bottom-right-radius: 4px;
+
+                            &__title {
+
+                                h5 {
+                                    color: #fff;
+                                    font-weight: bold;
+                                }
+
+                            }
+
+
+                            &__genre {
+                                margin-top: 1.5rem;
+
+                                h6 {
+                                    color: #fff;
+
+                                    span {
+                                        color: $color-primary;
+                                        font-weight: bold;
+                                    }
+                                }
+                            }
+
+                            &__episodes {
+                                margin-top: 1rem;
+
+                                h6 {
+                                    border: 3px solid $color-primary;
+                                    color: $color-primary;
+                                    width: 70%;
+                                    border-radius: 11px;
+                                    font-weight: bold;
+                                    text-align: center;
+                                    padding: 6px 0 6px 0;
+                                }
+                            }
+
+                            &__desc {
+                                margin-top: 0.8rem;
+
+                                p {
+                                    display: -webkit-box;
+                                    -webkit-box-orient: vertical;
+                                    -webkit-line-clamp: 3;
+                                    overflow: hidden;
+                                    color: #fff;
+
+                                    span {
+                                        color: $color-primary;
+                                        font-weight: bold;
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
