add dashboard news

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -19,3 +19,4 @@
 @import "./dashboard/dashboard-nav.scss";
 @import "./dashboard/dashboard-home.scss";
 @import "./dashboard/Header-bar.scss";
+@import "./dashboard/dashboard-news.scss";
