--- a/styles/dashboard/dashboard-home.scss
+++ b/styles/dashboard/dashboard-home.scss
@@ -8,7 +8,7 @@
 
         .section-hero {
             width: 100%;
-            height: 15.6rem;
+            height: 16.6rem;
             background-color: $black-color;
             box-shadow: 0 0 13px rgba(0, 0, 0, 0.61);
             border-radius: 4px;
@@ -86,6 +86,7 @@
                 .swiper-container {
                     width: 100%;
                     height: 100%;
+                    cursor: pointer;
 
                     .swiper {
                         width: 100%;
@@ -98,7 +99,7 @@
                         border-radius: 7px;
                         overflow: hidden;
                         background-color: $black-color ;
-                        width: 30%;
+                        width: 21rem;
                         height: 100%;
 
                         .cover {
@@ -118,7 +119,7 @@
 
                                 p {
                                     padding: 8px;
-                                    width: 85%;
+                                    width: 80%;
                                     white-space: nowrap;
                                     text-align: center;
                                     font-size: 16px;
@@ -168,7 +169,7 @@
                                 h6 {
                                     border: 3px solid $color-primary;
                                     color: $color-primary;
-                                    width: 70%;
+                                    width: 68%;
                                     border-radius: 11px;
                                     font-weight: bold;
                                     text-align: center;
