add LIstPage to dashboard

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -20,3 +20,5 @@
 @import "./dashboard/dashboard-home.scss";
 @import "./dashboard/Header-bar.scss";
 @import "./dashboard/dashboard-news.scss";
+@import "./dashboard/sectionCover.scss";
+@import "./dashboard/dashboard-list.scss";
