--- a/styles/dashboard/dashboard-list.scss
+++ b/styles/dashboard/dashboard-list.scss
@@ -1,12 +1,12 @@
-.dashboard-news {
+.dashboard-list {
     width: 79%;
     margin-left: 21%;
     height: max-content;
     overflow: hidden;
 
-    .dashboard-news-content {
+    .dashboard-list-content {
         width: 100%;
-        // padding: 40px 27px 43px 27px;
+
 
         .section-content {
             padding: 40px 25px 43px 25px;
@@ -22,7 +22,7 @@
 
                 &__cover {
                     width: 100%;
-                    height: 13.6rem;
+                    height: 12.6rem;
                     background-image: url(/one-piece.jpg);
                     background-size: cover;
 
