--- a/styles/dashboard/dashboard-home.scss
+++ b/styles/dashboard/dashboard-home.scss
@@ -155,10 +155,12 @@
 
                                 h6 {
                                     color: #fff;
+                                    font-size: 16.4px;
 
                                     span {
                                         color: $color-primary;
                                         font-weight: bold;
+                                        font-size: 16.5px;
                                     }
                                 }
                             }
@@ -183,13 +185,15 @@
                                 p {
                                     display: -webkit-box;
                                     -webkit-box-orient: vertical;
-                                    -webkit-line-clamp: 3;
+                                    -webkit-line-clamp: 4;
                                     overflow: hidden;
                                     color: #fff;
+                                    font-size: 16.4px;
 
                                     span {
                                         color: $color-primary;
                                         font-weight: bold;
+                                        font-size: 16.5px;
                                     }
                                 }
                             }
