add style to data

--- a/styles/dashboard/dashboard-home.scss
+++ b/styles/dashboard/dashboard-home.scss
@@ -145,6 +145,7 @@
                                 h5 {
                                     color: #fff;
                                     font-weight: bold;
+                                    width: 78%;
                                 }
 
                             }
