--- a/styles/dashboard/dashboard-news.scss
+++ b/styles/dashboard/dashboard-news.scss
@@ -62,6 +62,7 @@
                         h5 {
                             color: #fff;
                             font-weight: bold;
+                            width: 78%;
                         }
 
                     }
