--- a/styles/dashboard/dashboard-home.scss
+++ b/styles/dashboard/dashboard-home.scss
@@ -4,7 +4,7 @@
     height: max-content;
 
     .dashboard-home-content {
-        padding: 40px 27px 43px 27px;
+        padding: 40px 27px 23px 27px;
 
         .section-hero {
             width: 100%;
@@ -99,12 +99,12 @@
                         border-radius: 7px;
                         overflow: hidden;
                         background-color: $black-color ;
-                        width: 22rem;
+                        width: 22.1rem;
                         height: 100%;
 
                         .cover {
                             width: 100%;
-                            height: 13.6rem;
+                            height: 16.2rem;
                             background-image: url(/one-piece.jpg);
                             background-size: cover;
 
@@ -146,6 +146,10 @@
                                     color: #fff;
                                     font-weight: bold;
                                     width: 78%;
+                                    display: -webkit-box;
+                                    -webkit-box-orient: vertical;
+                                    -webkit-line-clamp: 2;
+                                    overflow: hidden;
                                 }
 
                             }
@@ -199,6 +203,26 @@
                                 }
                             }
                         }
+                    }
+
+                    .navigation-button{
+                        position: relative;
+                        z-index: 20;
+                        top: -17rem;
+                        width: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        padding-left: 5px;
+                        padding-right: 5px;
+                        justify-content: space-between;
+
+                         .icon{
+                            color: $bg-color;
+                            padding: 15px;
+                            border-radius: 50%;
+                            background-color: #fff;
+                            font-size: 18.5px;
+                         }
                     }
                 }
             }
