--- a/styles/dashboard/dashboard-news.scss
+++ b/styles/dashboard/dashboard-news.scss
@@ -22,7 +22,7 @@
 
                 &__cover {
                     width: 100%;
-                    height: 13.6rem;
+                    height: 16.2rem;
                     background-size: cover;
 
                     .date {
@@ -63,6 +63,10 @@
                             color: #fff;
                             font-weight: bold;
                             width: 78%;
+                            display: -webkit-box;
+                            -webkit-box-orient: vertical;
+                            -webkit-line-clamp: 2;
+                            overflow: hidden;
                         }
 
                     }
