--- a/styles/dashboard/dashboard-home.scss
+++ b/styles/dashboard/dashboard-home.scss
@@ -136,7 +136,9 @@
                             width: 100%;
                             height: 100%;
                             background-color: $black-color;
-                            padding: 15px;
+                            padding: 17px;
+                            padding-left: 20px;
+                            padding-right: 20px;
                             border-bottom-left-radius: 4px;
                             border-bottom-right-radius: 4px;
 
@@ -161,6 +163,10 @@
                                 h6 {
                                     color: #fff;
                                     font-size: 16.4px;
+                                    display: -webkit-box;
+                                    -webkit-box-orient: vertical;
+                                    -webkit-line-clamp: 1;
+                                    overflow: hidden;
 
                                     span {
                                         color: $color-primary;
