--- a/styles/dashboard/dashboard-news.scss
+++ b/styles/dashboard/dashboard-news.scss
@@ -53,7 +53,9 @@
                     width: 100%;
                     height: 100%;
                     background-color: $black-color;
-                    padding: 15px;
+                    padding: 17px;
+                    padding-left: 20px;
+                    padding-right: 20px;
                     border-bottom-left-radius: 4px;
                     border-bottom-right-radius: 4px;
 
@@ -78,6 +80,10 @@
                         h6 {
                             color: #fff;
                             font-size: 16.4px;
+                            display: -webkit-box;
+                            -webkit-box-orient: vertical;
+                            -webkit-line-clamp: 1;
+                            overflow: hidden;
 
                             span {
                                 color: $color-primary;
