add category to dashboard

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -22,3 +22,4 @@
 @import "./dashboard/dashboard-news.scss";
 @import "./dashboard/sectionCover.scss";
 @import "./dashboard/dashboard-list.scss";
+@import "./dashboard/dashboard-category.scss";
