add postBlog to react

--- a/styles/dashboard/dashboard-home.scss
+++ b/styles/dashboard/dashboard-home.scss
@@ -107,6 +107,7 @@
                             height: 16.2rem;
                             background-image: url(/one-piece.jpg);
                             background-size: cover;
+                            background-position: center center;
 
                             .date {
                                 display: flex;
