--- a/styles/global.scss
+++ b/styles/global.scss
@@ -23,3 +23,4 @@
 @import "./dashboard/sectionCover.scss";
 @import "./dashboard/dashboard-list.scss";
 @import "./dashboard/dashboard-category.scss";
+@import "./postanime.scss";
