--- a/styles/dashboard/dashboard-category.scss
+++ b/styles/dashboard/dashboard-category.scss
@@ -54,6 +54,7 @@
                     width: 100%;
                     height: 16.2rem;
                     background-size: cover;
+                    background-position: center center;
 
                     .date {
                         display: flex;
