--- a/styles/dashboard/dashboard-news.scss
+++ b/styles/dashboard/dashboard-news.scss
@@ -24,6 +24,7 @@
                     width: 100%;
                     height: 16.2rem;
                     background-size: cover;
+                    background-position: center center;
 
                     .date {
                         display: flex;
