--- a/styles/global.scss
+++ b/styles/global.scss
@@ -24,3 +24,6 @@
 @import "./dashboard/dashboard-list.scss";
 @import "./dashboard/dashboard-category.scss";
 @import "./postanime.scss";
+@import "./dashboard/blog.scss";
+@import "./dashboard/articleCard.scss";
+@import "./dashboard/cardWithoutSwiper.scss";
