--- a/styles/dashboard/Header-bar.scss
+++ b/styles/dashboard/Header-bar.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     background-color: $black-color;
+    z-index: 20;
 
     &__container {
         padding: 17px 40px 17px 40px;
