--- a/styles/dashboard/Header-bar.scss
+++ b/styles/dashboard/Header-bar.scss
@@ -85,6 +85,7 @@
             }
 
             .icon-sort {
+                cursor: pointer;
 
                 .icon {
                     color: #fff;
