--- a/styles/dashboard/articleCard.scss
+++ b/styles/dashboard/articleCard.scss
@@ -15,6 +15,7 @@
         background-color: $black-color ;
         width: 22.1rem;
         height: 100%;
+        cursor: pointer;
 
         .cover {
             width: 100%;
@@ -95,7 +96,7 @@
                 margin-top: 1rem;
 
                 h6 {
-                    border: 3px solid $color-primary;
+                    border: 2.5px solid $color-primary;
                     color: $color-primary;
                     width: 200px;
                     height: 38px;
