--- a/styles/dashboard/blog.scss
+++ b/styles/dashboard/blog.scss
@@ -130,7 +130,7 @@
       }
 
       .content {
-         padding: 0 30px 30px 30px;
+         padding: 0 30px 0 30px;
          margin-top: 5rem;
 
          .genre {
